# glfm

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  new_project.py
.github/workflows/: build.yml  build_examples.yml
example/: CMakeLists.txt  main.c
example/android/: .cproject  .gitignore  .project  AndroidManifest.xml  build.gradle  copytree.py
example/android/jni/: Android.mk  Application.mk
example/android/src/main/res/values/: strings.xml
example/assets/: simple.frag  simple.vert  texture.frag  texture.vert
example/cmake/: GLFMAppTarget.cmake
example/emscripten/: .gitignore  Makefile  shell.html
example/ios/GLFMExample/: GLFMExample-Info.plist  LaunchScreen.xib
example/ios/GLFMExample.xcodeproj/: project.pbxproj
example/ios/GLFMExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/platform/android/: .gitignore  build.gradle
example/platform/android/app/: .gitignore  CMakeLists.txt  build.gradle
example/platform/android/app/src/main/: AndroidManifest.xml
example/platform/android/app/src/main/java/com/brackeen/glfm/: GLFMActivity.java
example/platform/android/app/src/main/jni/native_app_glue/: android_native_app_glue.c
example/platform/android/app/src/main/res/values/: strings.xml
example/platform/android/gradle/wrapper/: gradle-wrapper.properties
example/platform/android/src/main/: AndroidManifest.xml
example/platform/emscripten/: Makefile  emscripten-pre.js  shell.html
example/platform/ios/GLFMExample/: GLFMExample-Info.plist
example/platform/ios/GLFMExample.xcodeproj/: project.pbxproj
example/src/: compass.c  file_compat.h  main.c  test_pattern.c  test_pattern_renderer_gles2.c  test_pattern_renderer_metal.m
examples/: CMakeLists.txt  anim.c  compass.c  heightmap.c  index.html.in  shader_toy.c  test_pattern.c  touch.c  triangle.c  typing.c
examples/assets/: shader_toy.frag  shader_toy.vert
examples/cmake/: GLFMAppTarget.cmake
examples/icons/: gen_icns.sh
examples/src/: compass.c  file_compat.h  main.c  test_pattern.c  test_pattern_renderer.h  touch.c  triangle.c  typing.c
include/: glfm.h
src/: glfm_android.c  glfm_apple.m  glfm_emscripten.c  glfm_internal.h  glfm_platform.h  glfm_platform_android.c  glfm_platform_apple.m  glfm_platform_desktop.c  glfm_platform_emscripten.c  glfm_platform_ios.m
tests/: README.md  build_all.sh  build_android.sh  build_android_examples.sh  build_apple.sh  build_apple_examples.sh  build_emscripten.sh  build_emscripten_examples.sh  clang-tidy-analyze.yml
